Se evitan Warnings debido al IDE necesario para los XIB correspondientes, ref: http://stackoverflow.com/questions/8054961/how-can-i-fix-freeform-size-simulated-metrics-are-not-available-prior-to-xcode

--- a/iGlobo/ControladorRepresentacionGlobo.xib
+++ b/iGlobo/ControladorRepresentacionGlobo.xib
@@ -118,7 +118,6 @@
 								<string key="NSFrame">{{426, 20}, {240, 43}}</string>
 								<reference key="NSSuperview" ref="339899832"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:328</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -509,6 +508,10 @@
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.InterfaceBuilder3</string>
+			<real value="4200" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<string key="IBCocoaTouchPluginVersion">933</string>
