--- a/iGlobo/ControladorListaBarras.xib
+++ b/iGlobo/ControladorListaBarras.xib
@@ -42,8 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{197, 0}, {261, 202}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:408</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="868280856">
 							<int key="NSColorSpace">3</int>
@@ -63,7 +61,6 @@
 						<int key="NSvFlags">256</int>
 						<string key="NSFrame">{{4, 17}, {67, 169}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="135979624"/>
 						<string key="NSReuseIdentifierKey">_NS:569</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -78,7 +75,6 @@
 						<int key="NSvFlags">256</int>
 						<string key="NSFrame">{{76, 9}, {123, 62}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="337818814"/>
 						<string key="NSReuseIdentifierKey">_NS:345</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -116,7 +112,6 @@
 						<int key="NSvFlags">256</int>
 						<string key="NSFrame">{{74, 110}, {115, 72}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1042673560"/>
 						<string key="NSReuseIdentifierKey">_NS:345</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -151,7 +146,6 @@
 						<int key="NSvFlags">256</int>
 						<string key="NSFrame">{{82, 55}, {112, 64}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="330937626"/>
 						<string key="NSReuseIdentifierKey">_NS:345</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -184,7 +178,6 @@
 				</array>
 				<string key="NSFrameSize">{458, 202}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="488757201"/>
 				<reference key="IBUIBackgroundColor" ref="868280856"/>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -335,71 +328,13 @@
 			<nil key="sourceID"/>
 			<int key="maxID">22</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CeldaGraficaDeBarras</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="contenedorGraficaBarra">UIView</string>
-						<string key="rangoEdad">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="contenedorGraficaBarra">
-							<string key="name">contenedorGraficaBarra</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="rangoEdad">
-							<string key="name">rangoEdad</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CeldaGraficaDeBarras.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ControladorListaBarras</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="celdaBarras">CeldaGraficaDeBarras</string>
-						<string key="etiquetaNumeroTotalPorGenero">UILabel</string>
-						<string key="imagen">UIImageView</string>
-						<string key="porcentajeResultante">UILabel</string>
-						<string key="tablaDatos">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="celdaBarras">
-							<string key="name">celdaBarras</string>
-							<string key="candidateClassName">CeldaGraficaDeBarras</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="etiquetaNumeroTotalPorGenero">
-							<string key="name">etiquetaNumeroTotalPorGenero</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="imagen">
-							<string key="name">imagen</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="porcentajeResultante">
-							<string key="name">porcentajeResultante</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tablaDatos">
-							<string key="name">tablaDatos</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ControladorListaBarras.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.InterfaceBuilder3</string>
+			<real value="4200" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
